tests/ui/intrinsics/incorrect-read_via_copy-defn.stderr
error[E0658]: the extern "rust-intrinsic" ABI is an implementation detail and perma-unstable
  --> $DIR/incorrect-read_via_copy-defn.rs:5:8
   |
LL | extern "rust-intrinsic" fn read_via_copy() {}
   |        ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/incorrect-read_via_copy-defn.rs:5:44
   |
LL | extern "rust-intrinsic" fn read_via_copy() {}
   |                                            ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
